configs/envoy.yaml
# admin: 定义 Envoy 的管理界面配置
admin:
  # access_log_path: 指定管理界面访问日志的路径
  access_log_path: /tmp/admin_access.log
  # address: 定义管理界面的监听地址
  address:
    # socket_address: 使用套接字地址进行配置
    socket_address:
      # address: 监听所有 IPv4 地址
      address: 0.0.0.0 # This makes the listener accept traffic on all IPs of the VM
      # port_value: 管理界面的端口号
      port_value: 9901

# static_resources: 定义静态配置资源，这些资源在 Envoy 启动时加载
static_resources:
  # listeners: 定义一个或多个监听器，用于接收下游客户端的连接
  listeners:
  # Listener for PostgreSQL Proxy
  - name: listener_psql
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 5432
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: psql_tcp
          cluster: "cloud_sql_psql_cluster"
  # - name: 定义第一个监听器的名称
  - name: listener_0
    # address: 定义监听器的监听地址
    address:
      # socket_address: 使用套接字地址进行配置
      socket_address:
        # address: 监听所有 IPv4 地址
        address: 0.0.0.0 # This makes the listener accept traffic on all IPs of the VM
        # port_value: 监听的端口号，这里是 80 端口（HTTP）
        port_value: 80
    # filter_chains: 定义监听器的过滤器链，用于处理接收到的连接
    filter_chains:
    # - filters: 定义过滤器链中的过滤器列表
    - filters:
      # - name: 指定使用 HTTP 连接管理器过滤器
      - name: envoy.filters.network.http_connection_manager
        # typed_config: 提供过滤器的详细、类型化的配置
        typed_config:
          # "@type": 指定配置的类型为 HTTP 连接管理器
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          # stat_prefix: 为此 HTTP 连接管理器生成的统计数据指定一个前缀
          stat_prefix: ingress_http
          # access_log: 配置访问日志
          access_log:
          # - name: 指定使用文件访问日志记录器
          - name: envoy.access_loggers.file
            # typed_config: 提供文件访问日志记录器的详细配置
            typed_config:
              # "@type": 指定配置的类型为文件访问日志
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              # path: 指定访问日志文件的路径
              path: "/tmp/envoy_access.log"
              # log_format: 定义日志格式
              log_format:
                # text_format_source: 使用内联字符串定义文本格式
                text_format_source:
                  # inline_string: 具体的日志格式字符串，包含各种请求和响应的详细信息
                  inline_string: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" \"%REQ(:AUTHORIZATION)%\"\n"
          # http_filters: 定义处理 HTTP 请求的过滤器列表
          http_filters:
          # - name: 第一个 HTTP 过滤器，用于 GCP 认证
          - name: envoy.filters.http.gcp_authn
            # typed_config: 提供 GCP 认证过滤器的详细配置
            typed_config:
              # "@type": 指定配置的类型为 GCP 认证过滤器
              "@type": type.googleapis.com/envoy.extensions.filters.http.gcp_authn.v3.GcpAuthnFilterConfig
              # http_uri: 定义用于获取认证令牌的 HTTP URI
              http_uri:
                # uri: 指向 GCP 元数据服务器以获取身份令牌的 URI
                uri: "http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/default/identity?audience=[AUDIENCE]"
                # cluster: 指定用于连接元数据服务器的集群
                cluster: "gcp_metadata_server"
                # timeout: 请求元数据服务器的超时时间
                timeout: 10s
          # - name: 最后一个 HTTP 过滤器，必须是路由器过滤器，用于将请求路由到上游集群
          - name: envoy.filters.http.router
            # typed_config: 提供路由器过滤器的详细配置
            typed_config:
              # "@type": 指定配置的类型为路由器
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          # route_config: 定义路由配置
          route_config:
            # name: 路由配置的名称
            name: local_route
            # virtual_hosts: 定义虚拟主机列表
            virtual_hosts:
            # - name: 定义一个虚拟主机的名称
            - name: multi_service_host
              # Tells the Virtual Host to use these routes for any requested domain (* is a wildcard).
              domains: ["*"] # This ensures routing works for access via IP address as well as domain names.
              # routes: 定义此虚拟主机的路由规则列表
              routes:
              # INJECT_ROUTES_HERE

  # clusters: 定义一个或多个上游集群，Envoy 会将请求代理到这些集群
  clusters:
  # INJECT_CLUSTERS_HERE
  # - name: Cluster for Cloud SQL PostgreSQL
  - name: cloud_sql_psql_cluster
    connect_timeout: 5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cloud_sql_psql_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # This should be the private IP of your Cloud SQL instance
                address: "10.195.208.3"
                port_value: 5432
  # - name: 定义第三个集群，用于连接 GCP 元数据服务器
  - name: gcp_metadata_server
    # connect_timeout: 连接超时时间
    connect_timeout: 5s
    # type: 服务发现类型，strict_dns 表示 Envoy 会解析所有返回的 IP 地址并单独连接
    type: strict_dns
    # lb_policy: 负载均衡策略为轮询
    lb_policy: round_robin
    # load_assignment: 静态端点分配
    load_assignment:
      # cluster_name: 关联的集群名称
      cluster_name: gcp_metadata_server
      # endpoints: 端点列表
      endpoints:
        # - lb_endpoints: 负载均衡端点列表
        - lb_endpoints:
            # - endpoint: 单个端点
            - endpoint:
                # address: 端点地址
                address:
                  # socket_address: 使用套接字地址进行配置
                  socket_address:
                    # address: GCP 元数据服务器的内部主机名
                    address: metadata.google.internal
                    # port_value: 元数据服务器的端口号
                    port_value: 80
